~~~~~~~~~~~~0.0.1 Revitalize 5-2-2022 xx.xx P.M~~~~~~~~~~~~~~
~Fixed drawing bounds on items that have offset draw positions.
~Fixed CustomObjects updating twice as fast, which wasn't intentional.
+Finished AdvancedFarmingSystem which harvests, plants, and fertilizes crops that reside in IrrigatedGardenPots!

~~~~~~~~~~~~0.0.1 Revitalize 4-29-2022 xx.xx P.M~~~~~~~~~~~~~~
~Fixed CraftingMenu not showing up due to retooling the TextureManagers.
~Fixed IrrigatedGardenPots taking an extra enricher, when adding the attachment.
~Fixed IrrigatedGardenPots not gicing an enricher back if there were any other attachments on the pot.
~Fixed being able to put multiple of the same type of attachment on an IrrigatedGardenPot, effectively wasting the items.
+Added the AutoPlanterGardenPot attachment, which will allow an AdvanceFarmingSystem to harvest crops automatically from pots with the attachment.
    ~Additionally added more animations to the garden pot to reflect these changes.

~~~~~~~~~~~~0.0.1 Revitalize 4-28-2022 xx.xx P.M~~~~~~~~~~~~~~
~Fixed Animation Managers not restarting their animations when entering into a GameLocation.
+Added more animation manager variants to the irrigated water pot.
~Fixed an issue where objects and furniture would be duplicated when loading a save by simply removing all duplicates.
+Fixed multiplayer issue where item duplication could occur when one player removes an item another player placed.
+Fixed CustomObject Stacking code.
+Fixed CustomObjects not being properly collected when turned into debris.
+Added utility code for generating item debris at a given tile location.
~Fixed AnimationManagers speeding up when placing the same object down multiple times.
~Fixed CustomObject.DrawPlacementBounds code to properly draw the objects and their placement bounds.

~~~~~~~~~~~~0.0.1 Revitalize 4-27-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added changelog
+Rewrote TextureManagers to be more organized to access from code easier.